Bug 248448 - Kmymoney segfaults when adding a default account to a payee
Summary: Kmymoney segfaults when adding a default account to a payee
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 251402 256560 262698 265924 267198 267665 270005 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-20 00:17 UTC by Alexandre
Modified: 2011-06-03 18:19 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.61 KB, text/plain)
2010-08-20 02:07 UTC, Jack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre 2010-08-20 00:17:57 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

when trying to set a default account to a payee. The crash happens when trying to choose the default account from the menu.

Reproducible: Always

Steps to Reproduce:
Select Payees.
Select any payee from the menu.
Select default account tab
Set the button "Use the default account for new ....."
Press the button "Suggest Category"


Actual Results:  
Segfaults.

Expected Results:  
Show the category menu so one can be chosen
Comment 1 Jack 2010-08-20 02:07:35 UTC
Created attachment 50766 [details]
New crash information added by DrKonqi

I confirm the crash upon clicking the "Suggest Category" button.  It happens whether or not I have selected a default account.

KMM is compiled from source (4.5) but KDE 4.4.5 is Gentoo emerge.
Comment 2 Alvaro Soliverez 2010-08-20 03:01:26 UTC
SVN commit 1165701 by asoliverez:

Only get valid transaction items from the payee register.

If confirmed that it works in all cases, will backport to stable branch.

BUG:248448

 M  +5 -1      kpayeesview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165701
Comment 3 Alvaro Soliverez 2010-08-22 01:48:26 UTC
SVN commit 1166489 by asoliverez:

Only get valid transaction items from the payee register.
Backported to stable branch.

BUG:248448

 M  +5 -1      kpayeesview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1166489
Comment 4 Alvaro Soliverez 2010-09-16 11:40:02 UTC
*** Bug 251402 has been marked as a duplicate of this bug. ***
Comment 5 Cristian Oneț 2010-11-10 23:15:51 UTC
*** Bug 256560 has been marked as a duplicate of this bug. ***
Comment 6 Alvaro Soliverez 2011-01-10 00:44:44 UTC
*** Bug 262698 has been marked as a duplicate of this bug. ***
Comment 7 Alvaro Soliverez 2011-02-09 21:26:09 UTC
*** Bug 265924 has been marked as a duplicate of this bug. ***
Comment 8 Alvaro Soliverez 2011-02-27 01:47:55 UTC
*** Bug 267198 has been marked as a duplicate of this bug. ***
Comment 9 Thomas Baumgart 2011-03-07 11:56:14 UTC
*** Bug 267665 has been marked as a duplicate of this bug. ***
Comment 10 Alvaro Soliverez 2011-04-03 23:28:41 UTC
*** Bug 270005 has been marked as a duplicate of this bug. ***
Comment 11 Maggi Page 2011-06-03 18:19:34 UTC
Application: kmymoney (4.5.3)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic i686
Distribution: Ubuntu 11.04

-- Information about the crash:
<In detail, tell us what you were doing  when the application crashed.>

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0xb778f930 (LWP 1800))]

Thread 2 (Thread 0xb755eb70 (LWP 1802)):
#0  0x003f0416 in __kernel_vsyscall ()
#1  0x01e55f76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x049c284b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x049b21af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x049b292b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x026b7304 in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0x049db2df in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x002e9e99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x01e6473e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb778f930 (LWP 1800)):
[KCrash Handler]
#7  0x06de98f1 in KLineEdit::contextMenuEvent(QContextMenuEvent*) () from /usr/lib/libkdeui.so.5
#8  0x0149ccd8 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#9  0x0189dff7 in QLineEdit::event(QEvent*) () from /usr/lib/libQtGui.so.4
#10 0x06de4f08 in KLineEdit::event(QEvent*) () from /usr/lib/libkdeui.so.5
#11 0x0185bf8f in QComboBox::contextMenuEvent(QContextMenuEvent*) () from /usr/lib/libQtGui.so.4
#12 0x0149ccd8 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#13 0x0185fc74 in QComboBox::event(QEvent*) () from /usr/lib/libQtGui.so.4
#14 0x01443d24 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#15 0x01448c62 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#16 0x06d123ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0x04ec00bb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#18 0x014ce343 in ?? () from /usr/lib/libQtGui.so.4
#19 0x014cc746 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#20 0x014f7b84 in ?? () from /usr/lib/libQtGui.so.4
#21 0x049b1aa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#22 0x049b2270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#23 0x049b2524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#24 0x04eed53c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#25 0x014f7775 in ?? () from /usr/lib/libQtGui.so.4
#26 0x04ebf289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0x04ebf522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#28 0x04ec3ecc in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#29 0x014418e7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#30 0x08086c4f in main (argc=0, argv=0x0) at /build/buildd/kmymoney-4.5.3/kmymoney/main.cpp:260