Only get valid transaction items from the payee register. Backported to stable branch.

BUG:248448

svn path=/branches/kmymoney/4.5/; revision=1166489