kmymoney/views/kpayeesview.cpp
@@ -225,23 +225,27 @@ void KPayeesView::slotChooseDefaultAccount(void)
 
   KMyMoneyRegister::RegisterItem* item = m_register->firstItem();
   while (item) {
-    KMyMoneyRegister::Transaction* t = dynamic_cast<KMyMoneyRegister::Transaction*>(item);
-    item = item->nextItem();
-    MyMoneySplit s = t->transaction().splitByPayee(m_payee.id());
-    const MyMoneyAccount& acc = file->account(s.accountId());
+    //only walk through selectable items. eg. transactions and not group markers
+    if(item->isSelectable()) {
+      KMyMoneyRegister::Transaction* t = dynamic_cast<KMyMoneyRegister::Transaction*>(item);
 
-    QString txt;
-    if (s.action() != MyMoneySplit::ActionAmortization
-        && acc.accountType() != MyMoneyAccount::AssetLoan
-        && !file->isTransfer(t->transaction())
-        && t->transaction().splitCount() == 2) {
-      MyMoneySplit s0 = t->transaction().splitByAccount(s.accountId(), false);
-      if (account_count.contains(s0.accountId())) {
-        account_count[s0.accountId()]++;
-      } else {
-        account_count[s0.accountId()] = 1;
+      MyMoneySplit s = t->transaction().splitByPayee(m_payee.id());
+      const MyMoneyAccount& acc = file->account(s.accountId());
+
+      QString txt;
+      if (s.action() != MyMoneySplit::ActionAmortization
+	  && acc.accountType() != MyMoneyAccount::AssetLoan
+	  && !file->isTransfer(t->transaction())
+	  && t->transaction().splitCount() == 2) {
+	MyMoneySplit s0 = t->transaction().splitByAccount(s.accountId(), false);
+	if (account_count.contains(s0.accountId())) {
+	  account_count[s0.accountId()]++;
+	} else {
+	  account_count[s0.accountId()] = 1;
+	}
       }
     }
+    item = item->nextItem();
   }
 
   QMap<QString, int>::Iterator most_frequent, iter;
